container-externo-contato
margin: -15px para tirar o deslocamento do container do contato, mistérios

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="#cardapio" class="mtopo">cardápio</a>
                 <a href="" class="mtopo">informaçoes</a>
                 <a href="" class="mtopo">reservas</a>
-                <a href="" class="mtopo">contato</a>
+                <a href="#contato" class="mtopo">contato</a>
             </div>
             
         </div>
@@ -99,7 +99,7 @@
 
         <!-- CONTAINER CONTATO -->
         <div id="contato">
-            <div class="cont-externo">     
+            <div class="cont-externo-contato">     
                 <h1>Fale conosco:</h1>   
                 <div id="cont-int-contato">
                     <form method="post" id="form_contatos">
