--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="#sobre" class="mtopo">home</a>
                 <a href="#cardapio" class="mtopo">cardápio</a>
                 <a href="" class="mtopo">informaçoes</a>
-                <a href="" class="mtopo">reservas</a>
+                <a href="#reservas" class="mtopo">reservas</a>
                 <a href="" class="mtopo">contato</a>
             </div>
             
@@ -97,40 +97,39 @@
             </div>
         </div>
 
-        <!-- CONTAINER CONTATO -->
-        <div id="contato">
-            <div class="cont-externo">     
-                <h1>Fale conosco:</h1>   
-                <div id="cont-int-contato">
-                    <div id="cont-form">
-                        <form method="post" id="form_contatos">
-                            <p>
-                                <label for="input_nome">Nome: </label>
-                                <input type="text" name="input_nome" id="c_nome" placeholder="Nome e sobrenome">
-                            </p>
-                            <p>
-                                <label for="input_email">Email: </label>
-                                <input type="email" name="input_email" id="c_email" placeholder="email@email.com">
-                            </p>
-                            <p>
-                                <label for="input_msg">Mensagem: </label>
-                                <textarea type="text" name="input_msg" id="c_msg" cols="45" rows="5" placeholder="Escreva aqui sua mensagem!"></textarea>
-                            </p>
-                            <fieldset id="fieldset_aval">
-                                <legend>Avalie nosso site: </legend>
+        <!-- CONTAINER RESERVAS -->
+        <div id="reservas">
+            <div class="cont-externo">
+                <div id="cont-ext-reservas">
+                    <h1>Reservas:</h1>   
+                        <div id="reserv-form">
+                            <form method="post" id="form-reservas">
                                 <p>
-                                    <input type="radio" class="radiobutton" name="input_aval" id="c_ruim"> Ruim
-
-                                    <input type="radio" class="radiobutton" name="input_aval" id="c_medio">Médio
-
-                                    <input type="radio" class="radiobutton" name="input_aval" id="c_bom">Bom
+                                    <label for="input_nome">Nome: </label>
+                                    <input type="text" name="input_nome" id="c_nome" placeholder="Nome e sobrenome">
                                 </p>
-                            </fieldset>                
-                            <input type="submit" id="submitbutton" value="Enviar"/>
-                        </form>
+                                <p>
+                                    <label for="input_email">Email: </label>
+                                    <input type="email" name="input_email" id="c_email" placeholder="email@email.com">
+                                </p>
+                                <p>
+                                    <label for="input_numpes">Nº de pessoas: </label>
+                                    <input type="number" name="input_numpes" id="c_numpes" >
+                                </p>
+                                <p>
+                                    <label for="input_data">Data: </label>
+                                    <input type="date" name="input_data" id="c_data" >
+                                </p>
+                                <p>
+                                    <label for="input_horario">Horário: </label>
+                                    <input type="time" name="input_horario" id="c_horario" >
+                                </p>
+                                                
+                                <input type="submit" id="submit-reservas" value="Enviar"/>
+                            </form>
+                        </div>
+                        <img src="img/reserva_img.png" alt="" class="img-reserva">                    
                     </div>
-                    <img src="img/contato_img.png" alt="" class="img-contato">                    
-                </div>
                 <button class="voltar" onclick="location.href='#sobre'">topo</button>
             </div>
         </div>
