--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="site">
         <!-- CONTAINER DO BANNER + MENU DO TOPO -->
         <div class="topo">
-            <img src="" alt="" class="itopo">
+            <img src="img/banner-amarelo1.png" alt="" class="itopo">
             <div class="menu">
                 <a href="#sobre" class="mtopo">home</a>
                 <a href="#cardapio" class="mtopo">cardápio</a>
