reservas_positions_corrected

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- CONTAINER INICIAL -->
         <div id="sobre">
             <div class="cont-externo">
-                <h1>sobre</h1>
+                <h1>Sobre</h1>
                 <div class="cont-int">
                     <img src="" alt="" class="isobre-esq">
                     <div class="cont-texto-dir"></div>
@@ -48,9 +48,9 @@
         <!-- CONTAINER CARDÁPIO -->
         <div id="cardapio">
             <div class="cont-externo">
-                <h1>cardapio</h1>
+                <h1>Cardápio</h1>
                 <div class="itens-sec">
-                    <h2>bebidas</h2>
+                    <h2>Bebidas</h2>
                         <div class="cont-itens">
                             <img src="" alt="" class="imgItens">
                             <div class="descItens"></div>
@@ -73,7 +73,7 @@
                         </div>
                 </div>
                 <div class="itens-sec">
-                    <h2>lanches</h2>
+                    <h2>Lanches</h2>
                         <div class="cont-itens">
                             <img src="" alt="" class="imgItens">
                             <div class="descItens"></div>
@@ -101,9 +101,9 @@
 
         <!-- CONTAINER RESERVAS -->
         <div id="reservas">
-            <div class="cont-externo">
-                <div id="cont-ext-reservas">
-                    <h1>Reservas:</h1>   
+            <div class="cont-externo">                
+                <h1>Reservas:</h1>  
+                <div id="cont-ext-reservas"> 
                         <div id="reserv-form">
                             <form method="post" id="form-reservas">
                                 <p>
