--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#cardapio" class="mtopo">cardápio</a>
                 <a href="" class="mtopo">informaçoes</a>
                 <a href="#reservas" class="mtopo">reservas</a>
-                <a href="" class="mtopo">contato</a>
+                <a href="#contato" class="mtopo">contato</a>
             </div>
             
         </div>
@@ -136,7 +136,44 @@
             </div>
         </div>
 
+        <!-- CONTAINER CONTATO -->
+        <div id="contato">
+            <div class="cont-externo">
+                <h1>Fale conosco:</h1>
+                <div id="cont-ext-contato">
+                    <div id="cont-form">
+                        <form method="post" id="form_contatos">
+                            <p>
+                                <label for="input_nome">Nome: </label>
+                                <input type="text" name="input_nome" id="c_nome" placeholder="Nome e sobrenome">
+                            </p>
+                            <p>
+                                <label for="input_email">Email: </label>
+                                <input type="email" name="input_email" id="c_email" placeholder="email@email.com">
+                            </p>
+                            <p>
+                                <label for="input_msg">Mensagem: </label>
+                            <br/>
+                                <textarea type="text" name="input_msg" id="c_msg" cols="45" rows="3" placeholder="Escreva aqui sua mensagem!"></textarea>
+                            </p>
+                            <fieldset id="fieldset_aval">
+                                <legend>Avalie nosso site: </legend>
+                                <p>
+                                    <input type="radio" class="radiobutton" name="input_aval" id="c_ruim"> Ruim
 
+                                    <input type="radio" class="radiobutton" name="input_aval" id="c_medio">Médio
+
+                                    <input type="radio" class="radiobutton" name="input_aval" id="c_bom">Bom
+                                </p>
+                            </fieldset>                
+                            <input type="submit" id="submitbutton" value="Enviar"/>
+                        </form>
+                    </div>
+                    <img src="img/contato_img.png" alt="" class="img-contato">                    
+                </div>
+                <button class="voltar" onclick="location.href='#sobre'">topo</button>
+            </div>
+        </div>
 
 
 
