troca de classe img por imgItens

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="cont-externo">
                 <h1>Sobre</h1>
                 <div class="cont-int">
-                    <img src="/img/cozinha.jpg" alt="" class="img">
+                    <img src="/img/cozinha.jpg" alt="" class="imgItens">
                     <div class="textoSobre">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore quam, nemo odio animi, incidunt natus placeat mollitia enim excepturi nihil quibusdam non perferendis officiis autem maxime minus, ab dolore saepe. Esse, officiis accusamus dolore cum ab exercitationem aut quo similique eveniet itaque. Molestias in libero deleniti, tempora autem perferendis sint.</p>
                     </div>
@@ -39,10 +39,10 @@
                     <div class="textoSobre">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore quam, nemo odio animi, incidunt natus placeat mollitia enim excepturi nihil quibusdam non perferendis officiis autem maxime minus, ab dolore saepe. Esse, officiis accusamus dolore cum ab exercitationem aut quo similique eveniet itaque. Molestias in libero deleniti, tempora autem perferendis sint.</p>
                     </div>
-                    <img src="/img/amigos.jpeg" alt="" class="img">
+                    <img src="/img/amigos.jpeg" alt="" class="imgItens">
                 </div>
                 <div class="cont-int">
-                    <img src="/img/comida.jpeg" alt="" class="img">
+                    <img src="/img/comida.jpeg" alt="" class="imgItens">
                     <div class="textoSobre">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore quam, nemo odio animi, incidunt natus placeat mollitia enim excepturi nihil quibusdam non perferendis officiis autem maxime minus, ab dolore saepe. Esse, officiis accusamus dolore cum ab exercitationem aut quo similique eveniet itaque. Molestias in libero deleniti, tempora autem perferendis sint.</p>
                     </div>
@@ -59,20 +59,20 @@
                 <div class="itens-sec">
                     
                         <div class="cont-itens">
-                            <img src="./img/xissalada.jpg" alt="" class="img">
+                            <img src="./img/xissalada.jpg" alt="" class="imgItens">
                             <div class="descItens">Xis</div>
                         </div>
                         <div class="cont-itens">
-                            <img src="./img/bauru.png" alt="" class="img">
+                            <img src="./img/bauru.png" alt="" class="imgItens">
                             <div class="descItens">Baurus
                             </div>
                         </div>
                         <div class="cont-itens">
-                            <img src="./img/burguerbacon.jpg" alt="" class="img">
+                            <img src="./img/burguerbacon.jpg" alt="" class="imgItens">
                             <div class="descItens">Hambúrguers</div>
                         </div>
                         <div class="cont-itens">
-                            <img src="./img/aipim.jpg" alt="" class="img">
+                            <img src="./img/aipim.jpg" alt="" class="imgItens">
                             <div class="descItens">Porções</div>
                         </div>
                       
@@ -80,19 +80,19 @@
                 <h2>Bebidas</h2>
                 <div class="itens-sec">
                         <div class="cont-itens">
-                            <img src="./img/fruki.png" alt="" class="img aspct">
+                            <img src="./img/fruki.png" alt="" class="imgItens aspct">
                             <div class="descItens">Refrigerante</div>
                         </div>
                         <div class="cont-itens">
-                            <img src="./img/suco.jpeg" alt="" class="img aspct">
+                            <img src="./img/suco.jpeg" alt="" class="imgItens aspct">
                             <div class="descItens">Suco Natural</div>
                         </div>
                         <div class="cont-itens">
-                            <img src="./img/original.jpeg" alt="" class="img aspct">
+                            <img src="./img/original.jpeg" alt="" class="imgItens aspct">
                             <div class="descItens">Cerveja</div>
                         </div>
                         <div class="cont-itens">
-                            <img src="./img/drink.png" alt="" class="img aspct">
+                            <img src="./img/drink.png" alt="" class="imgItens aspct">
                             <div class="descItens">Drink</div>
                         </div>
                 </div>
