./img nas fotos :+1:

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="cont-externo">
                 <h1>Sobre</h1>
                 <div class="cont-int">
-                    <img src="/img/cozinha.jpg" alt="" class="imgItens">
+                    <img src="./img/cozinha.jpg" alt="" class="imgItens">
                     <div class="textoSobre">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore quam, nemo odio animi, incidunt natus placeat mollitia enim excepturi nihil quibusdam non perferendis officiis autem maxime minus, ab dolore saepe. Esse, officiis accusamus dolore cum ab exercitationem aut quo similique eveniet itaque. Molestias in libero deleniti, tempora autem perferendis sint.</p>
                     </div>
@@ -39,10 +39,10 @@
                     <div class="textoSobre">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore quam, nemo odio animi, incidunt natus placeat mollitia enim excepturi nihil quibusdam non perferendis officiis autem maxime minus, ab dolore saepe. Esse, officiis accusamus dolore cum ab exercitationem aut quo similique eveniet itaque. Molestias in libero deleniti, tempora autem perferendis sint.</p>
                     </div>
-                    <img src="/img/amigos.jpeg" alt="" class="imgItens">
+                    <img src="./img/amigos.jpeg" alt="" class="imgItens">
                 </div>
                 <div class="cont-int">
-                    <img src="/img/comida.jpeg" alt="" class="imgItens">
+                    <img src="./img/comida.jpeg" alt="" class="imgItens">
                     <div class="textoSobre">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore quam, nemo odio animi, incidunt natus placeat mollitia enim excepturi nihil quibusdam non perferendis officiis autem maxime minus, ab dolore saepe. Esse, officiis accusamus dolore cum ab exercitationem aut quo similique eveniet itaque. Molestias in libero deleniti, tempora autem perferendis sint.</p>
                     </div>
