cardapio_scroll_consertado

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
         <!-- CONTAINER DO BANNER + MENU DO TOPO -->
-        <header class="topo">
+        <header class="topo" id="logo">
             <div class="imagens-topo">
                 <img src="img/banner-amarelo1.png" alt="" class="itopo">
                 <img src="img/mascot_images/mascote_sobre.png" alt="" class="mascote" id="mascote"> 
