Lanches estava escrito errado

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="cont-externo">
                 <h1>Cardápio</h1>
                 <!-- MINI MENU LANCHES -->
-                <div class="descItens aumentaFonte">Lancehs</div>
+                <div class="descItens aumentaFonte">Lanches</div>
                 <div class="itens-sec">
                     <div class="cont-itens" id="cont-itens-xis">
                         <a href="#xis-area">
