--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CPW1 Lanches</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="/img/icon.png"/>
 </head>
 <body>
         <!-- CONTAINER DO BANNER + MENU DO TOPO -->
