Revert "correcao do link do formulario"
This reverts commit b973bf42e79845f94b24828153eb5b148341dfcf.

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
             <div class="cont-externo">                
                 <h1>Reservas</h1>  
                 <div class="cont-int"> 
-                            <form method="post" class="formulario" action="/CPW1-Lanches/sucesso.html">
+                            <form method="post" class="formulario" action="/sucesso.html">
                                 <label for="input_nome">Nome: </label>
                                 <input type="text" name="input_nome" id="c_nome" class="item-form" placeholder="Nome e sobrenome" required>
                                     
@@ -450,7 +450,7 @@
             <div class="cont-externo">
                 <h1>Fale conosco</h1>
                 <div class="cont-int">
-                        <form method="post" class="formulario" action="/CPW1-Lanches/sucesso.html">
+                        <form method="post" class="formulario" action="/sucesso.html">
                                 <label for="input_nome">Nome: </label>
                                 <input type="text" name="input_nome" id="c_nome" class="item-form" placeholder="Nome e sobrenome" required>
                            
