--- a/index.html
+++ b/index.html
@@ -378,15 +378,18 @@
                 <div class="info-sec">
                         <div class="cont-itens2">
                             <div class="descItensinfo">Filial Centro</div>
-                            <p>rua sflkjskldfjsl</p>
+                            <p>Endereço: Rua dos Andradas, 123, Centro Histórico, POA</p>
+                            <p>Horários de funcionamento: 12:00 - 22:00</p>
                         </div>
                         <div class="cont-itens2">
                             <div class="descItensinfo">Filial Cidade Baixa</div>
-                            <p>rua sflkjskldfjsl</p>
+                            <p>Endereço: Rua Joaquim Nabuco, 123, Cidade Baixa, POA</p>
+                            <p>Horários de funcionamento: 15:00 - 00:00</p>
                         </div>
                         <div class="cont-itens2">
                             <div class="descItensinfo">Filial Quarto Distrito</div>
-                            <p>rua sflkjskldfjsl</p>
+                            <p>Endereço: Travessa São José, 123, Navegantes, POA</p>
+                            <p>Horários de funcionamento: 12:00 - 22:00</p>
                         </div>
                 </div>
                 <h2>Formas de Pagamento</h2>
